--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -28,3 +28,12 @@ a:hover {
 .perspective-1000 {
   perspective: 1000px;
 }
+html {
+  overflow-y: scroll;
+}
+html * {
+  transition: none !important;
+}
+html.transition * {
+  transition: all 0.3s ease !important;
+}
